--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -261,7 +261,7 @@ Table~\ref{tab:collected} collects an initial battery of tests we will be compar
 \begin{tcolorbox}
 \centering
 \begin{tabular}{l|c|c|c|c}
-Name & $\algo$ & Accuracy & Z-scored & Parameters\\ 
+Name & Algorithm & Accuracy & Z-scored & Parameters\\ 
 \hline
 \hline
 Hotelling & Hotelling & -- & -- & -- \\ 
