--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -545,10 +545,9 @@ Equivalently [TODO: verify], denoting by $S^{(b)}$ the indexes of observations, 
 
 \begin{definition}[b$0.632$]
 \label{def:b0632}
-Denoting by $\acc_{resub}$ the resubstitution accuracy estimate, 
-the b$0.632$ accuracy estimator, $\acc_{0.632}$, is defined as 
+The b$0.632$ accuracy estimator, $\accEstim_{\algo}^{0.632}$, is defined as 
 \begin{align}
-	\accEstim_{\algo}^{bLOO} := 0.368 \; \accEstim_{\algo}^{Resub}  + 0.632 \; \accEstim_{\algo}^{bLOO}.
+	\accEstim_{\algo}^{0.632} := 0.368 \; \accEstim_{\algo}^{Resub}  + 0.632 \; \accEstim_{\algo}^{bLOO}.
 \end{align}
 \end{definition}
 Simulation results reported in Figure~\ref{fig:bootstrap} with naming conventions in Table~\ref{tab:collected_2}.
@@ -561,15 +560,15 @@ The type of bootstrap, bLOO versus b$0.632$, does not change the power.
 \begin{tcolorbox}
 \centering
 \begin{tabular}{l|c|c|c|c|c}
-Name & Basis & Type & B & Accuracy & Parameters\\ 
+Name & Algorithm & Accuracy & B & Z-scored & Parameters\\ 
 \hline
 \hline
-lda.Boot.1 & LDA & b$0.632$ 	& 10 & accuracy &  -- \\ 
-lda.Boot.2 & LDA & bLOO 	& 10 & accuracy &  -- \\ 
-svm.Boot.1 & SVM & b$0.632$ 	& 10 & accuracy & cost=1e1 \\ 
-svm.Boot.2 & SVM & bLOO 	& 10 & accuracy & cost=1e1 \\ 
-svm.Boot.3 & SVM & b$0.632$ 	& 50 & accuracy & cost=1e1 \\ 
-svm.Boot.4 & SVM & bLOO 	& 50 & accuracy & cost=1e1 \\ 
+lda.Boot.1 & LDA & $\accEstim_{\algo}^{0.632}$ 	& $10$ & FALSE &  -- \\ 
+lda.Boot.2 & LDA & $\accEstim_{\algo}^{bLOO}$ 	& $10$ & FALSE &  -- \\ 
+svm.Boot.1 & SVM & $\accEstim_{\algo}^{0.632}$ 	& $10$ & FALSE & cost=1e1 \\ 
+svm.Boot.2 & SVM & $\accEstim_{\algo}^{bLOO}$ 	& $10$ & FALSE & cost=1e1 \\ 
+svm.Boot.3 & SVM & $\accEstim_{\algo}^{0.632}$ 	& $50$ & FALSE & cost=1e1 \\ 
+svm.Boot.4 & SVM & $\accEstim_{\algo}^{bLOO}$ 	& $50$ & FALSE & cost=1e1 \\ 
 \end{tabular} 
 \captionsetup{type=table}
 \caption{
