--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -563,12 +563,12 @@ The type of bootstrap, bLOO versus b$0.632$, does not change the power.
 Name & Algorithm & Accuracy & B & Z-scored & Parameters\\ 
 \hline
 \hline
-lda.Boot.1 & LDA & $\accEstim_{\algo}^{0.632}$ 	& $10$ & FALSE &  -- \\ 
-lda.Boot.2 & LDA & $\accEstim_{\algo}^{bLOO}$ 	& $10$ & FALSE &  -- \\ 
-svm.Boot.1 & SVM & $\accEstim_{\algo}^{0.632}$ 	& $10$ & FALSE & cost=1e1 \\ 
-svm.Boot.2 & SVM & $\accEstim_{\algo}^{bLOO}$ 	& $10$ & FALSE & cost=1e1 \\ 
-svm.Boot.3 & SVM & $\accEstim_{\algo}^{0.632}$ 	& $50$ & FALSE & cost=1e1 \\ 
-svm.Boot.4 & SVM & $\accEstim_{\algo}^{bLOO}$ 	& $50$ & FALSE & cost=1e1 \\ 
+lda.Boot.1 & LDA & b$0.632$ & $10$ & FALSE &  -- \\ 
+lda.Boot.2 & LDA & bLOO 	& $10$ & FALSE &  -- \\ 
+svm.Boot.1 & SVM & b$0.632$ & $10$ & FALSE & cost=1e1 \\ 
+svm.Boot.2 & SVM & bLOO 	& $10$ & FALSE & cost=1e1 \\ 
+svm.Boot.3 & SVM & b$0.632$ & $50$ & FALSE & cost=1e1 \\ 
+svm.Boot.4 & SVM & bLOO 	& $50$ & FALSE & cost=1e1 \\ 
 \end{tabular} 
 \captionsetup{type=table}
 \caption{
