--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -1244,4 +1244,22 @@ Contact: tongt@hkbu.edu.hk},
   note = {R package version 0.2.3}
 }
 
+@misc{_ramhiser/sparsediscrim_????,
+  title = {ramhiser/sparsediscrim},
+  abstract = {sparsediscrim - Sparse and Regularized Discriminant Analysis in R},
+  timestamp = {2016-08-13T14:02:35Z},
+  urldate = {2016-08-13},
+  howpublished = {\url{https://github.com/ramhiser/sparsediscrim}},
+  journal = {GitHub},
+  file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/U3F4XJ38/sparsediscrim.html:text/html}
+}
+
+@book{meyer_e1071:_2015,
+  title = {e1071: {{Misc Functions}} of the {{Department}} of {{Statistics}}, {{Probability Theory Group}} ({{Formerly}}: {{E1071}}), {{TU Wien}}},
+  timestamp = {2016-08-14T20:29:54Z},
+  author = {Meyer, David and Dimitriadou, Evgenia and Hornik, Kurt and Weingessel, Andreas and Leisch, Friedrich},
+  year = {2015},
+  note = {R package version 1.6-7}
+}
+
 
