--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -307,9 +307,9 @@ Another example is \textit{lda.noCV.1}, which is Fisher's LDA, returning the res
 Our simulation show that all of the tests considered conserve the desired $0.05$ false positive rate, up to varying levels of conservatism.
 This can be seen from the fact that the probability of rejection is no larger than $0.05$ in the absence of any effect, encoded by a red circle. 
 This is true, in particular if: \newline
-(a) The folds are balanced or not (figures~\ref{fig:simulation_11},\ref{fig:simulation_12}) \newline
-(b) The tuning parameters of some test statistic are varied (cost=). \newline
-(d) the number of folds is varied. \newline
+(a) The folds are balanced or not (figures~\ref{fig:simulation_1},\ref{fig:n_folds} and \ref{fig:n_folds_unbalanced}) \newline
+(b) The tuning parameters of some test statistic are varied (cost=$10$ versus cost=$0.1$). \newline
+(d) The number of folds is varied (figures \ref{fig:n_folds} and \ref{fig:n_folds_unbalanced}). \newline
 We also observe that the most conservative tests are the resubstitution accuracy statistics. 
 We return to this matter in the Discussion.
 
