--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -308,10 +308,11 @@ Our simulation show that all of the tests considered conserve the desired $0.05$
 This can be seen from the fact that the probability of rejection is no larger than $0.05$ in the absence of any effect, encoded by a red circle. 
 This is true, in particular if: \newline
 (a) The folds are balanced or not (Figures~\ref{fig:simulation_1},\ref{fig:n_folds} and \ref{fig:n_folds_unbalanced}) \newline
-(b) The tuning parameters of some test statistic are varied (cost=$10$ versus cost=$0.1$). \newline
+(b) The tuning parameters are varied (cost=$10$ versus cost=$0.1$). \newline
 (c) The number of folds is varied (Figures \ref{fig:n_folds} and \ref{fig:n_folds_unbalanced}). \newline
 (d) The noise is heavytailed (Figure~\ref{fig:t_null}). \newline
-(e) The problem is high or low dimensional (Figures \ref{fig:large_sample}.)
+(e) The problem is high or low dimensional (Figure~\ref{fig:large_sample}.) \newline
+(f) The noise is correlated (Figure~\ref{fig:ar_1}). \newline
 We also observe that the most conservative tests are the resubstitution accuracy statistics. 
 We return to this matter in the Discussion.
 
