--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -362,9 +362,9 @@ From the simulation results reported in Appendix~\ref{apx:simulations} we collec
 
 \item For heavy tailed distributions (Figure~\ref{fig:t_null}), the extra power of the location test vanishes. 
 
-\item The presence of correlations between coordinates reduces the signal to noise ratio (SNR), thus reduces power. 
-More importantly, in the presence of correlations the effect of regularization is amplified, increasing the power difference between regularized and non-regularized test statistics.
-Put differently- in low SNR regimes, regularization proves crucial (Figure~\ref{fig:ar_1}).
+\item The presence of (positive) correlations is known to increase the data's variability, i.e., reduce the signal to noise ratio (SNR). This leads to a power reduction. 
+For this reason, in the presence of correlations the importance of regularization is amplified, increasing the power difference between regularized and non-regularized test statistics (Figure~\ref{fig:ar_1}).
+Put differently- in low SNR regimes, regularization is crucial.
 
 \item The z-scoring of the accuracies was introduced to deal with unbalanced foldings. 
 If the z-scoring has any effect at all, it merely kills power.
