--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -451,7 +451,8 @@ Our empirical example suggests that even if the population test does not necessa
 
 
 The practical advice for the practitioner, is that for the purpose of signal detection, there is typically a population test that is more powerful than an accuracy test. 
-There is also a good chance that it would be easier to implement, and faster to run, since no cross validation will be involved. 
+The class of population tests we examined, in particular their regularized versions, are good performers in a wide range of simulation setups and empirically. 
+They are also typically easier to implement, and faster to run, since no cross validation will be involved. 
 
 
 
