--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -459,7 +459,7 @@ They are also typically easier to implement, and faster to run, since no cross v
 \subsection{Ease of implementation}
 A very important consideration is the ease of implementation. 
 The need for cross validation of the accuracy test greatly increases its computational complexity. 
-Moreover, anyone who has actually implemented tests with discrete statistics, will attest they are more prone to programming errors. 
+Moreover, programming with discrete statistics is more prone to errors. 
 This is because their unforgiveness to the type of inequalities used. 
 Indeed, mistakenly replacing a weak inequality with a strong inequality in one's program may considerably change the results. 
 This is not the case for continuous test statistics. 
